# trading-agent

./: .env.example  .gitignore  AGENT_USAGE.md  IMPLEMENTATION_SUMMARY.md  README.md  TRADE_EXECUTION_FIX.md  alpaca_tools.py  analysis_tools.py  decision_history.py  main.py  ollama.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  test_imports.py  test_tool_calling.py  uv_run.py  web_search.py
data/: decision_history.json
src/: __init__.py  agent.py  alpaca_tools.py  analysis_tools.py  decision_history.py  tools.py  web_search.py
src/tools/: __init__.py  alpaca.py  analysis.py  history.py  web_search.py
tests/: README.md  __init__.py  conftest.py  test_agent_tools.py  test_integration.py  test_options_trading.py  test_portfolio_analysis.py  test_risk_management.py  test_standalone_functions.py  test_tool_parameter_normalization.py
